Added auto user allocation.